Bump to java 11 Add controller tests